<resources>
    <string name="app_name">TBCPay</string>
    <string name="copyright">©2018 CASATRADE LTD</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="imei">IMEI</string>
    <string name="company">Company</string>
    <string name="search_new_imei">Search Again</string>
    <string name="continueStr">Next</string>
    <string name="scan_imei">Scan IMEI or S/N</string>
    <string name="enter_manually">Type IMEI or S/N</string>
    <string name="choose_imei_enter_method">Pick IMEI or S/N Search Method</string>
    <string name="name">Name</string>
    <string name="three_dots">…</string>
    <string name="no_transmission">No transmission</string>
    <string name="search">Search</string>
    <string name="serial">S/N</string>
    <string name="rent_label">Sale Type</string>
    <string name="enter_at_least_four">Please enter at least 4 digits</string>
    <string name="info">Information</string>
    <string name="satellites">Satellites</string>
    <string name="engine">Engine</string>
    <string name="time">Time</string>
    <string name="main_power">Main Power</string>
    <string name="battery_power">Battery Power</string>
    <string name="last_tranmission">Last Transmission</string>
    <string name="company_name">Company Name</string>
    <string name="search_company">Search Companies</string>
    <string name="plate_number">Plate Number</string>
    <string name="controller">Controller</string>
    <string name="sale_type">Sale type</string>
    <string name="additional_comment">Additional Comment</string>
    <string name="send">SEND</string>
    <string name="search_by_imei">Search By IMEI</string>
    <string name="search_by_sn">Search By S/N</string>
    <string name="installation">Installation</string>
    <string name="fix">Fix</string>
    <string name="deinstallation">Removal</string>
    <string name="switch_cars">Switch Devices</string>
    <string name="pick_job_type">Pick job type</string>
    <string name="upload">Finish Setup</string>
    <string name="take_new_pic">Take new photo</string>
    <string name="enter_car_plate_number">Enter vehicle Plate Number</string>
    <string name="pick_controller">Pick Controller</string>
    <string name="running">Running</string>
    <string name="off">OFF</string>
    <string name="rent">Rent</string>
    <string name="purchased">Purchased</string>
    <string name="error">Error</string>
    <string name="could_not_upload">Could not upload Image</string>
    <string name="image_uploaded">Image Uploaded</string>
    <string name="image_uploaded_successfully">Image uploaded successfully</string>
    <string name="image_not_uploaded">Image not uploaded</string>
    <string name="skip_sending_image">Skip uploading an image?</string>
    <string name="skip">Skip</string>
    <string name="could_not_find_car">Could not find device</string>
    <string name="could_not_find_car_with_given_imei">Could not find device with given imei(Try again later)</string>
    <string name="job_finished_successfully">Job finished successfully</string>
    <string name="terminal_id">Terminal ID</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="could_not_assign">Could not assign device to terminal!</string>
    <string name="server_error">Server Error</string>
    <string name="enter_at_least_one">Please enter at least 1 Digits</string>
    <string name="device_imei">Device IMEI</string>
    <string name="all">All</string>
    <string name="filter_events">Filter Events</string>
    <string name="perform_tests">Perform Tests</string>
    <string name="simulate_events">Simulate Events</string>
    <string name="uploaded_successfully">Uploaded successfully</string>
    <string name="success">Success</string>
    <string name="assigned_successfully">Assigned Successfully</string>
    <string name="terminal_already_assigned">Terminal already assigned</string>
    <string name="device_imei_or_sn">Enter Device IMEI or S/N</string>
    <string name="logout">Logout</string>
    <string name="assign">Assign</string>
    <string name="assigning_device">Assigning device</string>
    <string name="uploading">Uploading</string>
    <string name="assign_imei_to_terminal">Assign IMEI to Terminal</string>
    <string name="start">Start</string>
    <string name="timer">Timer</string>
    <string name="command_send_success">Command sent successfully</string>
    <string name="command_send_error">Could not send command</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="address">Address</string>
    <string name="enter_device_imei">Enter device IMEI</string>
    <string name="enter_device_sn">Enter device S/N</string>
    <string name="enter_phone_to_continue">Enter phone to continue</string>
    <string name="device_name">Device Name</string>
    <string name="status">Status</string>
</resources>
