<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BasicInfoFragment">

    <Button
        android:id="@+id/upload_btn"
        style="@style/BtnStyleNormal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/assign_imei_to_terminal" />

    <Button
        android:id="@+id/new_imei_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/upload_btn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_btn_cancel"
        android:text="@string/search_new_imei"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/success_image"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignEnd="@+id/new_imei_btn"
        android:layout_alignLeft="@+id/new_imei_btn"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/new_imei_btn"
        android:layout_alignStart="@+id/new_imei_btn"
        android:layout_marginTop="15dp"
        app:srcCompat="@drawable/checked"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/success_image"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/imei"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/imei_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="3545 6546 52135"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/serial"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/serial_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="3545 6546 52135"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/terminal_id"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/terminal_id_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/company"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/phone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/value_phone"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="10"
            android:inputType="phone"
            android:text="" />


    </LinearLayout>

</RelativeLayout>
