<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CheckListActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/btn_method_scan"
            android:layout_width="match_parent"
            android:text="@string/scan_imei"
            android:layout_height="80dp"
            android:background="@drawable/rounded_btn_main"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_method_manual"
            android:layout_width="match_parent"
            android:text="@string/enter_manually"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_btn_main"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:text="@string/choose_imei_enter_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textSize="22sp" />

    <info.hoang8f.android.segmented.SegmentedGroup xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:id="@+id/method_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="7dp"
        android:checkedButton="@+id/imei_radio"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="10dp">

        <RadioButton
            android:id="@+id/imei_radio"
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_by_imei" />

        <RadioButton
            style="@style/RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_by_sn" />
    </info.hoang8f.android.segmented.SegmentedGroup>

</RelativeLayout>
