<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ge.casatrade.casautility.Fragments.CameraFragment">


    <Button
        android:id="@+id/continue_btn"
        style="@style/BtnStyleNormal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="startScan"
        android:text="@string/continueStr"
        android:visibility="gone" />

    <Button
        android:id="@+id/upload_btn"
        style="@style/BtnStyleAtentive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/continue_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"
        android:text="@string/upload"
        android:visibility="gone" />

    <Button
        android:id="@+id/take_pic_btn"
        style="@style/BtnStyleNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:text="@string/take_new_pic" />

    <ImageView
        android:id="@+id/pic_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/upload_btn"
        android:layout_below="@+id/take_pic_btn"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" />
</RelativeLayout>
