<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EventsFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp">

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/device_name"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/signal_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:src="@drawable/baseline_signal_cellular_0_bar_24"
                android:tint="@color/white" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:gravity="left"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:gravity="center"
            android:text="@string/perform_tests"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/filter_events"
            android:textColor="@color/white" />

        <Spinner
            android:id="@+id/categories_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/simulate_events"
            android:textColor="@color/white" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/command_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                android:theme="@style/AppTheme.WhiteAccent"/>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/btn_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

        </FrameLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/timer"
            android:textColor="@color/white"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_white"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/timer_restart"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_replay_24" />

            <EditText
                android:id="@+id/txt_timer"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:enabled="false"
                android:gravity="center"
                android:inputType="numberSigned"
                android:padding="5dp"
                android:text="0"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/timer_start"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_play_arrow_24" />


        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/txt_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/next_btn"
        android:layout_below="@+id/holder"
        android:gravity="bottom"
        android:lineSpacingExtra="5dp"
        android:padding="15dp"
        android:scrollbars="vertical"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/clear_log"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/txt_log"
        android:layout_gravity="end"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_delete_24" />


    <Button
        android:id="@+id/next_btn"
        style="@style/BtnStyleNormal"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/upload" />

</RelativeLayout>